# brackeysjam2025.2

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: cmake-multi-platform.yml
assets/: car village.blend  car village.blend1  car_village.blend  car_village.blend1  car_village.mtl  map.png~  test dimensions.mtl
assets/brackeys_platformer_assets/music/: time_for_adventure.opus
assets/brackeys_platformer_assets/sounds/: coin.opus  explosion.opus  hurt.opus  jump.opus  power_up.opus  tap.opus
build_linux/assets/: CarForBrackeyJam.png~  HumanCombined.png~  car village.mtl  shon.opus
dialogues/: annoying.yaml  enableJump.yaml  introduction.yaml  platforming.yaml
include/ame/: flecs_guard.h
src/: .gameplay.c.kate-swp  Car.cpp  Car.h  CarCameraController.h  CarController.h  CarState.h  GameManager.h  GameMediator.cpp  GameMediator.h  JumpUpState.cpp  JumpUpState.h  MoveBackwardState.cpp  MoveBackwardState.h  MoveForwardState.cpp  MoveForwardState.h  Player.h  SwitchOffBoostState.cpp  SwitchOffBoostState.h  SwitchOnBoostState.cpp  SwitchOnBoostState.h  abilities.c  abilities.h  app.c  app.h  config.h  dialogue_generated.h  dialogue_manager.c  dialogue_manager.h  embedded_dialogues_gen.c  gameplay.c  gameplay.h  input.c  input.h  main.c  main.cpp  makefile  obj_loader.h  obj_map.cpp  obj_map.h  path_util.c  (+7 more)
src/entities/: car.cpp  car.h  human.c  human.h
src/render/: pipeline.c  pipeline.h
tools/: dialogue_yaml_to_c.py
trash/: CMakeLists.txt  Car.cpp  Car.h  CarController.h  CarState.h  GameManager.h  GameMediator.cpp  GameMediator.h  JumpUpState.cpp  JumpUpState.h  MoveBackwardState.cpp  MoveBackwardState.h  MoveForwardState.cpp  MoveForwardState.h  Player.h  SwitchOffBoostState.cpp  SwitchOffBoostState.h  SwitchOnBoostState.cpp  SwitchOnBoostState.h  globals.h  input_local.cpp  input_local.h  main.cpp
